# MuVIcell

./: .gitignore  DEVELOPMENT.md  README.md  README_old.md  pyproject.toml
docs/: API.md
examples/: advanced_features.ipynb  basic_usage.ipynb
notebooks/: MuVIcell_Tutorial.ipynb
src/muvicell/: __init__.py  analysis.py  cli.py  core.py  data.py  muvi_runner.py  preprocessing.py  synthetic.py  utils.py  visualization.py  visualization_minimal.py
tests/: conftest.py  test_analysis.py  test_basic.py  test_complete_workflow.py  test_data.py  test_muvi_runner.py  test_notebook_complete.py  test_notebook_workflow.py  test_notebook_workflow_complete.py  test_preprocessing.py  test_synthetic.py
