[project]
name = "muvicell"
version = "0.1.0"
description = "From cell-type stratified features to multicellular coordinated programs"
readme = "README.md"
authors = [
    { name = "HartmannLab", email = "info@hartmannlab.org" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "plotnine>=0.10.0",
    "scanpy",
    "anndata",
    "muon",
    "jupyter",
    "torch>=2.6.0",
    "tensordict>=0.6.2",
    "muvi"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
