[project]
name = "muvicell"
version = "0.1.2"
description = "From cell-type stratified features to multicellular coordinated programs"
readme = "README.md"
authors = [
    { name = "Loan Vulliard (@Hartmann Lab)", email = "loan.vulliard@dkfz-heidelberg.de" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "plotnine>=0.10.0",
    "scanpy",
    "anndata",
    "muon",
    "jupyter",
    "statsmodels",
    "torch>=2.6.0",
    "tensordict>=0.6.2",
    "muvi>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
override-dependencies = [
  "tensordict>=0.6.2,<0.8",
]
